--- a/poll/templates/index.html
+++ b/poll/templates/index.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %} Available Polls {% endblock %}
+{% block content %}
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
     <div class="panel panel-default">
