Added view e template create in the project

--- a/poll/templates/create.html
+++ b/poll/templates/create.html
@@ -25,19 +25,19 @@
                         <div class="col-lg-4">
                             <div class="form-group">
                                 <label for="option1">Option 1</label>
-                                {% render_field from.option_one class="form-control" %}
+                                {% render_field form.option_one class="form-control" %}
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
                                 <label for="option2">Option 2</label>
-                                {% render_field from.option_two class="form-control" %}
+                                {% render_field form.option_two class="form-control" %}
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="form-group">
                                 <label for="option3">Option 3</label>
-                                {% render_field from.option_three class="form-control" %}
+                                {% render_field form.option_three class="form-control" %}
                             </div>
                         </div>
                     </div>
