--- a/poll/templates/base.html
+++ b/poll/templates/base.html
@@ -15,21 +15,25 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="#">Poll app</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Poll app</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Polls <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'home' %}">Polls <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Create Poll</a>
+              <a class="nav-link" href="{% url 'create' %}">Create Poll</a>
             </li>
         </div>
       </nav>
-
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-success text-center">{{ message }}</div>
+        {% endfor %}
+      {% endif %}
       <div class="container top">
         {% block content %}
 
